# -openline-otel

./: README.md  REPORT.md  pyproject.toml  verify-node.mjs
artifacts/: conformance-receipt.json
scripts/: .gitkeep  generate_conformance.py
tests/: test_processor.py  test_real_sdk_integration.py
