[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openline-otel"
version = "0.1.0"
description = "Portable signed receipts from OpenTelemetry traces"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=41",
  "opentelemetry-api>=1.30",
  "opentelemetry-sdk>=1.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

